Might have done something useless

--- a/manifest.json
+++ b/manifest.json
@@ -13,8 +13,9 @@
         }
     ],
     "web_accessible_resources": [
-        "background.html",
-        "test.html",
-        "device.min.css"
+        "main/index.html",
+        "main/main.css",
+        "main/assets/lock.svg",
+        "main/devices.min.css"
     ]
 }
